--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,8 @@ body {
 		height: 56px;
 		display: flex;
 		align-items: center;
+		padding-left: 0;
+		padding-right: 0;
 	}
 
 	.kebo-logo-text {
